--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="about.html" role="menuitem" class="navigation-list_item">About Me</a>
                 </li>
                 <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
+                    <a href="contact.html" role="menuitem" class="navigation-list_item">Contact Me</a>
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
