--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,15 @@
                 <p><em>*All fields required</em></p><br>
                 <form>
                     <label class="standard-label" for="fullname">Please enter your full name:</label>   <br>
-                    <input type="text" id="fullname" name="fullname" value"" required>   <br><br>
+                    <input> type="text" id="fullname" name="fullname" value"" required <input/><br><br>
                     <label for="aboutyou">Please tell me a little about yourself (240 characters max!):</label><br>
-                    <input type="text" id="aboutyou" name="aboutyou" maxlength="240" value"" required>
+                    <input> type="text" id="aboutyou" name="aboutyou" maxlength="240" value"" required <input/>
                     <br><br>
                     <label for="need">
                         Please tell me how I can help you! (240 characters max!):
                     </label>
                     <br>
-                    <input type="text" id="need" name="need" maxlength="240" value"" required>
+                    <input> type="text" id="need" name="need" maxlength="240" value"" required <input/>
                     <br><br>
 
                     <button type="submit" id="contact__button">Hit me up!</button><br><br>
@@ -67,7 +67,7 @@
                     <label for="message">Message (240 characters max!):*     </label>
                     <input id="message" maxlength="240" required>
                     <p>*Required field</p>
-                    <input type="submit" value="Send message" id="contact__button">
+                    <input> type="submit" value="Send message" id="contact__button" <input/>
                 </form><br>
             </div>
         </div>
