--- a/about.html
+++ b/about.html
@@ -1,8 +1,5 @@
-﻿
-
-
-<!DOCTYPE html lang="en">
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -48,7 +45,6 @@
             <h2>Skills and Experience</h2>
             <p>
                 *Note: All skills (unless otherwise noted) are in a non-professional/extra-circular environment
-            </p>
                 <table>
                     <thead>
                         <tr>
@@ -75,6 +71,7 @@
                         </tr>
                     </tbody>
                 </table><br /><br /><br />
+            </p>
             <p>This is what I enjoy doing:</p>
             <ul>
                 <li>Front-end development</li>
@@ -85,12 +82,13 @@
                 <li>Watching movies</li>
             </ul>
             <div class="cv">
-                <a href="file/cv.pdf" class="button" download="download">Download my CV</a><br />
+                <a href="file/cv.pdf" class="button" download=download>Download my CV</a><br />
             </div>
-                <xml version="1.0" encoding="iso-8859-1" ?>
+            <div>
+                <?xml version="1.0" encoding="iso-8859-1" ?>
                 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                     viewbox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                     viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
                 <circle style="fill:#88C5CC;" cx="256" cy="256" r="256" />
 
@@ -101,11 +99,11 @@
                 <path id="left_light" style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M0,256c0,6.228,0.3,12.372,0.744,18.488L288,164v-52
 		L89.968,61.224C34.936,108.176,0,177.992,0,256z" />
 
-                <path id="right_light" style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M454.2,94L384,112v52l124.104,47.736
+                <path id="right_light"style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M454.2,94L384,112v52l124.104,47.736
 		C500.408,167.572,481.44,127.288,454.2,94z" />
 
 </g>
-<path id="back__waves" style="fill:#2179A6;" d="M256,512c56.068,0,107.888-18.08,150.056-48.648C393.448,460.628,384,449.42,384,436
+<path id="back__waves"style="fill:#2179A6;" d="M256,512c56.068,0,107.888-18.08,150.056-48.648C393.448,460.628,384,449.42,384,436
 	c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4
 	c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28
 	c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4
@@ -190,15 +188,16 @@
 <g>
 </g>
 </svg>
-            </xml>
-        </div>
-</main>
+
+
+            </div>
+    </main>
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
-            <img src="img/github_icon.svg" alt="Github"/>
-            <img src="img/twitter_icon.svg" alt="Twitter"/>
-            <img src="img/linkedin_icon.svg" alt="LinkedIn"/>
+            <img src="img/github_icon.svg" alt="Github" target="_blank" />
+            <img src="img/twitter_icon.svg" alt="Twitter" target="_blank" />
+            <img src="img/linkedin_icon.svg" alt="LinkedIn" target="_blank" />
         </div>
     </footer>
 
