--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@
                 CSS and JavaScript on the side. I am now ready to take it on as a full-time career and see what doors it opens up for me to contribute!
             </p>
             <h2>Skills and Experience</h2>
-            <p>
-                *Note: All skills (unless otherwise noted) are in a non-professional/extra-circular environment
+            <p>*Note: All skills (unless otherwise noted) are in a non-professional/extra-circular environment</p>
                 <table>
                     <thead>
                         <tr>
@@ -71,7 +70,7 @@
                         </tr>
                     </tbody>
                 </table><br /><br /><br />
-            </p>
+
             <p>This is what I enjoy doing:</p>
             <ul>
                 <li>Front-end development</li>
