remove space between id and style attributes on 102 and 106

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 <a href="file/cv.pdf" class="button" download=download>Download my CV</a><br />
             </div>
 
-                <?xml version="1.0" encoding="iso-8859-1" ?>
+                <xml version="1.0" encoding="iso-8859-1" ?>
                 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                      viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -98,11 +98,11 @@
                 <path id="left_light" style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M0,256c0,6.228,0.3,12.372,0.744,18.488L288,164v-52
 		L89.968,61.224C34.936,108.176,0,177.992,0,256z" />
 
-                <path id="right_light"style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M454.2,94L384,112v52l124.104,47.736
+                <path id="right_light" style="opacity:0.2;fill:#F5F5F5;enable-background:new    ;" d="M454.2,94L384,112v52l124.104,47.736
 		C500.408,167.572,481.44,127.288,454.2,94z" />
 
 </g>
-<path id="back__waves"style="fill:#2179A6;" d="M256,512c56.068,0,107.888-18.08,150.056-48.648C393.448,460.628,384,449.42,384,436
+<path id="back__waves" style="fill:#2179A6;" d="M256,512c56.068,0,107.888-18.08,150.056-48.648C393.448,460.628,384,449.42,384,436
 	c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4
 	c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28
 	c0-2.212-1.788-4-4-4s-4,1.788-4,4c0,15.464-12.536,28-28,28s-28-12.536-28-28c0-2.212-1.788-4-4-4s-4,1.788-4,4
