closed div tag in main section

--- a/about.html
+++ b/about.html
@@ -81,13 +81,12 @@
                 <li>Watching movies</li>
             </ul>
             <div class="cv">
-                <a href="file/cv.pdf" class="button" download=download>Download my CV</a><br />
-            </div>
-
+                <a href="file/cv.pdf" class="button" download="download">Download my CV</a><br />
+        </div>
                 <xml version="1.0" encoding="iso-8859-1" ?>
                 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                     viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                     viewbox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
                 <circle style="fill:#88C5CC;" cx="256" cy="256" r="256" />
 
