--- a/about.html
+++ b/about.html
@@ -80,9 +80,11 @@
                 <li>Golfing</li>
                 <li>Watching movies</li>
             </ul>
-            <div class="cv">
-                <a href="file/cv.pdf" class="button" download="download">Download my CV</a><br />
+                <div class="cv">
+                    <a href="file/cv.pdf" class="button" download="download">Download my CV</a><br />
+                </div>
         </div>
+    </main>
                 <xml version="1.0" encoding="iso-8859-1">
                 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -187,8 +189,8 @@
 </g>
 </svg>
 
+</xml>
 
-    </main>
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
