--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <div class="contact__grid">
             <div class="contact__item" id="contact__item-two">
                 <h2>Option 2: Fill out this information here...</h2>
-                <form action="" method="post">
+                <form method="post">
                     <label class="standard-label" for="contact-email">E-mail:*      </label>
                     <input type="email" id="contact-email" required><br><br>
                     <label for="my-input">Telephone:   </label>
