updated for attribute on label element to id

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <h2>Option 1: Fill out a little information about yourself below and I'll get back to you in a jiffy!</h2>
                 <p><em>*All fields required</em></p><br>
                 <form>
-                    <label class="standard-label" for="fullname">Please enter your full name:</label>   <br>
+                    <label class="standard-label" id="fullname">Please enter your full name:</label>   <br>
                     <input> type="text" id="fullname" name="fullname" value"" required <input/><br><br>
                     <label for="aboutyou">Please tell me a little about yourself (240 characters max!):</label><br>
                     <input> type="text" id="aboutyou" name="aboutyou" maxlength="240" value"" required <input/>
