--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    <meta content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1 itemprop=">
 </head>
 
 
@@ -42,15 +42,15 @@
                 <p><em>*All fields required</em></p><br>
                 <form>
                     <label class="standard-label" for="fullname">Please enter your full name:</label>   <br>
-                    <input type="text" id="fullname" name="fullname" value"" required>   <br><br>
+                    <input type="text" id="fullname" name="fullname" required>   <br><br>
                     <label for="aboutyou">Please tell me a little about yourself (240 characters max!):</label><br>
-                    <input type="text" id="aboutyou" name="aboutyou" maxlength="240" value"" required>
+                    <input type="text" id="aboutyou" name="aboutyou" maxlength="240" required>
                     <br><br>
                     <label for="need">
                         Please tell me how I can help you! (240 characters max!):
                     </label>
                     <br>
-                    <input type="text" id="need" name="need" maxlength="240" value"" required>
+                    <input type="text" id="need" name="need" maxlength="240" required>
                     <br><br>
 
                     <button type="submit" id="contact__button">Hit me up!</button><br><br>
