--- a/contact.html
+++ b/contact.html
@@ -53,14 +53,14 @@
                     <input type="text" id="need" name="need" maxlength="240" required>
                     <br><br>
 
-                    <button type="submit" id="contact__button">Hit me up!</button><br><br>
+                    <button type="submit" class="contact__button">Hit me up!</button><br><br>
                 </form>
             </div>
         </div>
         <div class="contact__grid">
             <div class="contact__item" id="contact__item-two">
                 <h2>Option 2: Fill out this information here...</h2>
-                <form action="" method="post">
+                <form method="post">
                     <label class="standard-label" for="contact-email">E-mail:*      </label>
                     <input type="email" id="contact-email" required><br><br>
                     <label for="my-input">Telephone:   </label>
@@ -68,7 +68,7 @@
                     <label for="message">Message (240 characters max!):*     </label>
                     <input id="message" maxlength="240" required>
                     <p>*Required field</p>
-                    <input type="submit" value="Send message" id="contact__button">
+                    <input type="submit" value="Send message" class="contact__button">
                 </form><br>
             </div>
         </div>
