change second contact__button back to an id

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
-    <meta content="width=device-width, initial-scale=1 itemprop=">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -68,7 +68,7 @@
                     <label for="message">Message (240 characters max!):*     </label>
                     <input id="message" maxlength="240" required>
                     <p>*Required field</p>
-                    <input type="submit" value="Send message" class="contact__button">
+                    <input type="submit" value="Send message" id="contact__button">
                 </form><br>
             </div>
         </div>
