--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -62,9 +62,9 @@
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
-                <img src="img/github_icon.svg" alt="Github" target="_blank">
-                <img src="img/twitter_icon.svg" alt="Twitter" target="_blank">
-                <img src="img/linkedin_icon.svg" alt="LinkedIn" target="_blank">
+                <img src="img/github_icon.svg" alt="Github">
+                <img src="img/twitter_icon.svg" alt="Twitter">
+                <img src="img/linkedin_icon.svg" alt="LinkedIn">
         </div>
     </footer>
 
