remove href attribute from button element

--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head lang="en">
     <meta charset="utf-8">
     <title>DoGreat Enterprises</title>
     <link rel="shortcut icon" href="./img/life-2048978_1920.png" type="image/x-icon">
@@ -46,28 +46,28 @@
                     <p>
                     **Under Construction**
                     </p>
-                    <button type="button" href="#" class="github__button">See project on GitHub</button>
+                    <button type="button" class="github__button">See project on GitHub</button>
                 </div>
                 <div class="grid__item">
                     <h2>Mobile web app #2</h2>
                     <p>
                     **Under Construction**
                     </p>
-                    <button type="button" href="#" class="github__button">See project on GitHub</button>
+                    <button type="button" class="github__button">See project on GitHub</button>
                 </div>
                 <div class="grid__item">
                     <h2>Mobile web app #3</h2>
                     <p>
                     **Under Construction**
                     </p>
-                    <button type="button" href="#" class="github__button">See project on GitHub</button>
+                    <button type="button" class="github__button">See project on GitHub</button>
                 </div>
                 <div class="grid__item">
                     <h2>Mobile web app #4</h2>
                     <p>
                     **Under Construction**
                     </p>
-                    <button type="button" href="#" class="github__button">See project on GitHub</button>
+                    <button type="button" class="github__button">See project on GitHub</button>
                 </div>
             </div>
         </div>
