add lang attribute to html element

--- a/work.html
+++ b/work.html
@@ -1,8 +1,8 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head lang="en">
+<head>
     <meta charset="utf-8">
     <title>DoGreat Enterprises</title>
     <link rel="shortcut icon" href="./img/life-2048978_1920.png" type="image/x-icon">
