update about page stylings

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
@@ -44,7 +44,7 @@
             </p>
             <h2>Skills and Experience</h2>
             <p>*Note: All skills (unless otherwise noted) are in a non-professional/extra-circular environment</p>
-                <table>
+                <table class="center">
                     <thead>
                         <tr>
                             <td>Skills</td>
@@ -69,9 +69,9 @@
                             <td>Beginnier</td>
                         </tr>
                     </tbody>
-                </table><br /><br /><br />
+                </table><br /><br />
 
-            <p>This is what I enjoy doing:</p>
+            <h3>This is what I enjoy doing:</h3>
             <ul>
                 <li>Front-end development</li>
                 <li>Back-end development</li>
