--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="style.production.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -41,9 +41,9 @@
             </div>
             <div class="profile__welcome">
                 <h1>Hello World!</h1>
-                <p>
+                <h3>
                     My name is David Grimberg. I am a <span>web</span> developer from the U.S.
-                </p>
+                </h3>
             </div>
             <div class="work__link">
                 <a href="work.html">Check out some of my code</a><br><br>
