--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DoGreat Enterprises</title>
+    <title>David Grimberg | Full-Stack Developer</title>
     <link rel="shortcut icon" href="./img/life-2048978_1920.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
