--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/style.production.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -50,8 +50,8 @@
                 Pokémon, including their height and image. All users have to do is click the button with the name of the pokemon they wish to research 
                 and a modal will be opened that reveals these details.
                     </p>
-                    <div>
-                      <img class="project" src="img/pokedex_img.png" style="height: 100%; width: 100%; object-fit: contain" alt="Pokedex Project Image" />
+                    <div class="project">
+                      <img   src="img/pokedex_img.png" style="height: 100%; width: 100%; object-fit: contain" alt="Pokedex Project Image" />
                     </div>
                     <a type="button" class="github__button" href="https://dagrimb.github.io/js-simple-app/">See Hosted Site</a>
                     <a type="button" class="github__button" href="https://github.com/dagrimb/js-simple-app">See Project Repository on Github</a>
@@ -64,8 +64,8 @@
                       register for an account and create a list of their favorite movies. Users are also able to find out more about these 
                       favorite movies, such as details about a movie's genre, director and score on Rotten Tomatoes.
                     </p>
-                    <div>
-                      <img class="project" src="img/myfavfilmz_img.png" style="height: 100%; width: 100%; object-fit: contain" alt="myfavfilmz Project Image" />
+                    <div class="project">
+                      <img  src="img/myfavfilmz_img.png" style="height: 100%; width: 100%; object-fit: contain" alt="myfavfilmz Project Image" />
                     </div>
                     <a type="button" class="github__button" href="https://myfavfilmz.netlify.app/">See Hosted Site</a>
                     <a type="button" class="github__button" href="https://github.com/dagrimb/myfavfilmz-client">See Project Repository on Github</a>
@@ -81,8 +81,8 @@
                 
                       
                     </p>
-                    <div>
-                      <img class="project" src="img/meetapp_img.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Meetapp Project Image" />
+                    <div class="project">
+                      <img src="img/meetapp_img.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Meetapp Project Image" />
                     </div>
                     <a type="button" class="github__button" href="https://dagrimb.github.io/meet/">See Hosted Site</a>
                     <a type="button" class="github__button" href="https://github.com/dagrimb/meet">See Project Repository on Github</a>
