--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -88,11 +88,17 @@
                     <a type="button" class="github__button" href="https://github.com/dagrimb/meet">See Project Repository on Github</a>
                 </div>
                 <div class="grid__item">
-                    <h2>Mobile web app #4</h2>
+                    <h2>WeChat</h2>
                     <p>
-                    **Under Construction**
+                    WeChat is a native, mobile chat application to be used on both Android and iOS devices. It was developed in React Native,
+                    employing several of its libraries, such as asyncStorage to store messages for offline access. Other technologies used
+                    are Expo, Android Emulator, and Google Firestore Database. Users are able to instantly chat with the ones they love,
+                    taking and sending pictures, as well as their current location.
                     </p>
-
+                    <div class="project">
+                      <img src="img/wechat_img.png" style="height: 100%; width: 100%; object-fit: contain;" alt="WeChat Project Image" />
+                    </div>
+                    <a type="button" class="github__button" href="https://github.com/dagrimb/WeChat">See Project Repository on Github</a>
                 </div>
             </div>
         </div>
