--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                 <li>Watching movies</li>
             </ul>
                 <div class="cv">
-                    <a href="file/cv.pdf" class="button" download="download">Download my CV</a><br />
+                    <a href="files/David Grimberg resume.pdf" class="button" download="download">Download my Resume</a><br />
                 </div>
         </div>
     </main>
@@ -193,9 +193,15 @@
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
-            <img src="img/github_icon.svg" alt="Github"/>
-            <img src="img/twitter_icon.svg" alt="Twitter"/>
-            <img src="img/linkedin_icon.svg" alt="LinkedIn"/>
+            <a href="https://github.com/dagrimb" target="_blank" rel="noopener noreferrer">
+              <img src="img/github_icon.svg" class="social-media__icon" alt="Github">
+            </a>
+            <a href="https://twitter.com/DavidGrimberg1" target="_blank" rel="noopener noreferrer">
+              <img src="img/twitter_icon.svg" class="social-media__icon" alt="Twitter">
+            </a>
+            <a href="https://www.linkedin.com/in/david-grimberg/" target="_blank" rel="noopener noreferrer">
+              <img src="img/linkedin_icon.svg" class="social-media__icon" alt="LinkedIn">
+            </a>
         </div>
     </footer>
 
