--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
     <footer class="page-footer">
         <div class="social-media">
             <p>Find me on</p>
-                <img src="img/github_icon.svg" alt="Github">
-                <img src="img/twitter_icon.svg" alt="Twitter">
-                <img src="img/linkedin_icon.svg" alt="LinkedIn">
+              <a href="https://github.com/dagrimb" target="_blank" rel="noopener noreferrer">
+                <img src="img/github_icon.svg" class="social-media__icon" alt="Github">
+              </a>
+              <a href="https://twitter.com/DavidGrimberg1" target="_blank" rel="noopener noreferrer">
+                <img src="img/twitter_icon.svg" class="social-media__icon" alt="Twitter">
+              </a>
+              <a href="https://www.linkedin.com/in/david-grimberg/" target="_blank" rel="noopener noreferrer">
+                <img src="img/linkedin_icon.svg" class="social-media__icon" alt="LinkedIn">
+              </a>
         </div>
     </footer>
 
