--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </div>
     </main>
     <footer class="page-footer">
-        <div class="social-media">
+        <div class="social-media" id="contact-social">
             <p>Find me on</p>
             <a href="https://github.com/dagrimb" target="_blank" rel="noopener noreferrer">
               <img src="img/github_icon.svg" class="social-media__icon" alt="Github">
