update index.html with content revisions

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             </div>
             <div class="profile__welcome">
                 <h1>Hello World!</h1>
-                <h3>
-                    My name is David Grimberg. I am a <span>web</span> developer from the U.S.
-                </h3>
+                <h3>My name is David Grimberg. I am a web developer from the U.S. </h3>
+                <h3>I strive to build web applications that contribute to the 
+                  overall betterment of society, whether their services be in the realm of overall well-being, intellectual engagement, 
+                  or creative exploration. </h3>                                 
             </div>
             <div class="work__link">
                 <a href="work.html">Check out some of my code</a><br><br>
