--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
                           <li>vanilla JavaScript</li>
                           <li>jQuery</li>
                           <li>Bootstrap</li>
-                          <li><a href="https://pokeapi.co/api/v2/pokemon/" class="grid__item"  target="_blank" rel="noopener noreferrer">The Pokemon API</a></li>
+                          <li><a href="https://pokeapi.co/api/v2/pokemon/" class="grid__item"  id="api-link"  target="_blank" rel="noopener noreferrer">The Pokemon API</a></li>
                       </ul>
                       <div class="project">
                         <img src="img/pokedex_img.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="Pokedex Project Image" />
@@ -118,7 +118,7 @@
             <ul id="bulleted-list">
               Technologies Used:
               <li>React.js</li>
-              <li><a href="https://developers.google.com/calendar/api" class="grid__item"  target="_blank" rel="noopener noreferrer">Google Calendar API</a></li>
+              <li><a href="https://developers.google.com/calendar/api" class="grid__item"  id="api-link" target="_blank" rel="noopener noreferrer">Google Calendar API</a></li>
               <li>AWS Lambda</li>
               <li>OAuth2 authentication</li>
               <li>Jest</li>
