--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Contact David Grimberg</title>
-    <link rel="shortcut icon" href="./img/life-2048978_1920.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/mylogo.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
@@ -15,25 +15,22 @@
 
 
 <body>
-    <header class="page-header">
-        <img src="img/dogreat.jpg" class="page-header__item" alt="DoGreat Enterprises logo">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem" class="navigation-list_item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list_item">About Me</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+  <header class="page-header">
+    <img src="img/mylogo.png" class="page-header__item" alt="David Grimberg's logo">
+    <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list">
+            <li role="presentation">
+                <a href="index.html" role="menuitem" class="navigation-list_item">About Me</a>
+            </li>
+            <li role="presentation">
+                <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
+            </li>
+            <li role="presentation">
+                <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
+            </li>
+        </ul>
+    </nav>
+</header>
     <main class="main-contact">
         <h1>Choose from the following options to contact me:</h1> <br>
         <div class="contact__grid">
