--- a/work.html
+++ b/work.html
@@ -1,11 +1,12 @@
 ﻿
 <!DOCTYPE html>
 <html lang="en">
-
+  <link type="text/css" rel="stylesheet" href="magicthumb/magicthumb.css"/>
+  <script type="text/javascript" src="magicthumb/magicthumb.js"></script>
 <head>
     <meta charset="utf-8">
     <title>David Grimberg's work</title>
-    <link rel="shortcut icon" href="./img/life-2048978_1920.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/mylogo.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
@@ -17,29 +18,25 @@
 <body>
     <!-- Header including the log and the main navigation -->
     <header class="page-header">
-        <!-- Add Logo here -->
-        <img src="img/dogreat.jpg" class="page-header__item" alt="DoGreat Enterprises logo">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem" class="navigation-list_item">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list_item">About Me</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list_item naviagation-list__item--active">Work</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+      <img src="img/mylogo.png" class="page-header__item" alt="David Grimberg's logo">
+      <nav class="main-navigation page-header__item">
+          <ul role="menubar" class="navigation-list">
+              <li role="presentation">
+                  <a href="index.html" role="menuitem" class="navigation-list_item">About Me</a>
+              </li>
+              <li role="presentation">
+                  <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
+              </li>
+              <li role="presentation">
+                  <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
+              </li>
+          </ul>
+      </nav>
+  </header>
     <!-- Main content -->
     <section>
         <div class="main-work">
-            <h1>Work</h1><br>
+            <h1>My Work</h1><br>
                   <div class="grid">
                     <!-- Grid items will live here -->
                     <div class="grid__item" id="project-one">
@@ -59,10 +56,12 @@
                           <li><a href="https://pokeapi.co/api/v2/pokemon/" class="grid__item"  id="api-link"  target="_blank" rel="noopener noreferrer">The Pokemon API</a></li>
                       </ul>
                       <div class="project">
-                        <img src="img/pokedex_img.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="Pokedex Project Image" />
+                        <a href="img/pokedex_bigimg.png" class="MagicThumb"><img src="img/pokedex_smallimg.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="Pokedex Project Image" /></a>
                       </div>
+                <div class="buttons">
                       <a type="button" class="github__button" href="https://dagrimb.github.io/Pokedex/" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
                       <a type="button" class="github__button" href="https://github.com/dagrimb/Pokedex" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+                    </div>
                     </div>
           <div class="grid__item" id="project-two">
             <h2>myfavfilmz-API</h2>
@@ -80,9 +79,11 @@
               <li>Mongo & MongDB Atlas</li>
             </ul>
             <div class="project">
-              <img src="img/myfavfilmz_API_img.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="Pokedex Project Image" />
+              <a href="img/myfavfilmz_API_bigimg.png" class="MagicThumb"><img src="img/myfavfilmz_API_smallimg.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="Pokedex Project Image" /></a>
             </div>
-            <a type="button" class="github__button" href="https://github.com/dagrimb/myfavfilmz-api" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+            <div class="buttons">
+              <a type="button" class="github__button" href="https://github.com/dagrimb/myfavfilmz-api" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+          </div>
           </div>
           <div class="grid__item" id="project-three">
             <h2>myfavfilmz-React-client</h2>
@@ -103,10 +104,12 @@
               <li>Axios</li>
             </ul>
             <div class="project">
-              <img  src="img/myfavfilmz_React_img.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="myfavfilmz Project Image" />
+              <a href="img/myfavfilmz_React_bigimg.png" class="MagicThumb"><img  src="img/myfavfilmz_React_smallimg.png" style="height: 100%; width: 100%; object-fit: contain" class="thumbnail" alt="myfavfilmz Project Image" /></a>
             </div>
-            <a type="button" class="github__button" href="https://myfavfilmz.netlify.app/" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
+            <div class="buttons">
+              <a type="button" class="github__button" href="https://myfavfilmz.netlify.app/" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
             <a type="button" class="github__button" href="https://github.com/dagrimb/myfavfilmz-React-client" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+         </div>
           </div>
           <div class="grid__item" id="project-four">
             <h2>Meet App</h2>
@@ -130,10 +133,12 @@
               <li>Axios</li>
             </ul>
             <div class="project">
-              <img src="img/meetapp_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="Meetapp Project Image"/>
+              <a href="img/meetapp_bigimg.png" class="MagicThumb"><img src="img/meetapp_smallimg.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="Meetapp Project Image"/></a>
             </div>
-            <a type="button" class="github__button" href="https://dagrimb.github.io/meet/" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
+            <div class="buttons">
+              <a type="button" class="github__button" href="https://dagrimb.github.io/meet/" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
             <a type="button" class="github__button" href="https://github.com/dagrimb/meet" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+          </div>
           </div>
           <div class="grid__item" id="project-five">
             <h2>WeChat</h2>
@@ -149,10 +154,12 @@
               <li>Google Firestore Database</li>
             </ul>
             <div class="project">
-              <img src="img/wechat_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" />
+              <a href="img/wechat_bigimg.png" class="MagicThumb"><img src="img/wechat_smallimg.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
             </div>
+            <div class="buttons">
             <a type="button" class="github__button" href="https://vimeo.com/656415117" target="_blank" rel="noopener noreferrer">See conversation between my phone and the Android Emulator</a>
             <a type="button" class="github__button" href="https://github.com/dagrimb/WeChat" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
+          </div>
           </div>
           <div class="grid__item" id="project-six">
             <h2>myfavfilmz-Angular-client</h2>
@@ -170,12 +177,14 @@
                 <li>Webpack</li>
               </ul>
               <div class="project">
-                <img src="img/myfavfilmz_Angular_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" />
+                <a href="img/myfavfilmz_Angular_bigimg.png" class="MagicThumb"><img src="img/myfavfilmz_Angular_smallimg.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
               </div>
+              <div class="buttons">
               <a type="button" class="github__button" href="https://dagrimb.github.io/myfavfilmz-Angular-client/welcome" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
               <a type="button" class="github__button" href="https://github.com/dagrimb/myfavfilmz-Angular-client" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
               <a type="button" class="github__button" href="https://trello.com/b/Hbz3fmvq/myfavfilmz" target="_blank" rel="noopener noreferrer">See Trello Board</a>
-          </div>
+            </div>
+            </div>
         </div>  
       </div>    
     </section>
