--- a/work.html
+++ b/work.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <link type="text/css" rel="stylesheet" href="magicthumb/magicthumb.css"/>
   <script type="text/javascript" src="magicthumb/magicthumb.js"></script>
@@ -154,7 +153,7 @@
               <li>Google Firestore Database</li>
             </ul>
             <div class="project">
-              <a href="img/wechat_bigimg.png" class="MagicThumb"><img src="img/wechat_smallimg.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
+              <a href="img/wechat_bigimg.png" class="MagicThumb"><img src="img/wechat_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
             </div>
             <div class="buttons">
             <a type="button" class="github__button" href="https://vimeo.com/656415117" target="_blank" rel="noopener noreferrer">See conversation between my phone and the Android Emulator</a>
@@ -177,7 +176,7 @@
                 <li>Webpack</li>
               </ul>
               <div class="project">
-                <a href="img/myfavfilmz_Angular_bigimg.png" class="MagicThumb"><img src="img/myfavfilmz_Angular_smallimg.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
+                <a href="img/myfavfilmz_Angular_bigimg.png" class="MagicThumb"><img src="img/myfavfilmz_Angular_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
               </div>
               <div class="buttons">
               <a type="button" class="github__button" href="https://dagrimb.github.io/myfavfilmz-Angular-client/welcome" target="_blank" rel="noopener noreferrer">See Hosted Site</a>
