--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                                 <tr>
                                     <td>JavaScript</td>
                                     <td>1</td>
-                                    <td>Beginnier</td>
+                                    <td>Beginner</td>
                                 </tr>
                                 <tr>
                                   <td>React</td>
                                   <td>1</td>
-                                  <td>Beginnier</td>
+                                  <td>Beginner</td>
                               </tr>
                               <tr>
                                 <td>Angular</td>
                                 <td>1</td>
-                                <td>Beginnier</td>
+                                <td>Beginner</td>
                             </tr>
                             </tbody>
                         </table><br /><br />
