--- a/contact.html
+++ b/contact.html
@@ -9,64 +9,75 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/style.production.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-
 <body>
+  <!-- Header including the log and the main navigation -->
   <header class="page-header">
     <img src="img/mylogo.png" class="page-header__item" alt="David Grimberg's logo">
-    <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-            <li role="presentation">
-                <a href="index.html" role="menuitem" class="navigation-list_item">About Me</a>
-            </li>
-            <li role="presentation">
-                <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
-            </li>
-            <li role="presentation">
-                <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
-            </li>
-        </ul>
+    <nav class="main-navigation">
+      <ul role="menubar" class="navigation-list">
+        <li role="presentation">
+          <a href="index.html" role="menuitem" class="navigation-list_item">About Me</a>
+        </li>
+        <li role="presentation">
+          <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
+        </li>
+        <li role="presentation">
+          <a href="work.html" role="menuitem" class="navigation-list_item">Work</a>
+        </li>
+      </ul>
     </nav>
-</header>
-    <main class="main-contact">
-        <h1>Choose from the following options to contact me:</h1> <br>
-        <div class="contact__grid">
-            <div class="contact__item" id="contact__item-three">
-                <h2>
-                    Contact me with
-                    <a href="mailto:dg98211@gmail.com?subject=Request%20for%20Services&body=I%20have%20seen%20a%20sample%20of%20your%20work%20and%20am%20very%20interested%20in%20recruiting%20your%20services%20for%20a%20project%20I%20have%20set%20out%20to%20complete!"> this template email!</a>
-                </h2><br>
-            </div>
+  </header>
+  <main class="main-contact">
+    <h1>Choose from the following options to contact me:</h1> <br>
+    <div class="contact__grid">
+      <div class="contact__item" id="contact__item-one">
+        <h2>
+          Contact me with
+          <a href="mailto:dg98211@gmail.com?subject=Request%20for%20Services&body=I%20have%20seen%20a%20sample%20of%20your%20work%20and%20am%20very%20interested%20in%20recruiting%20your%20services%20for%20a%20project%20I%20have%20set%20out%20to%20complete!"> this template email!</a>
+        </h2><br>
+      </div>
+    </div>
+    <div class="contact__grid">
+      <div class="contact__item" id="contact__item-two">
+        <h2>Send a message</h2>
+          <div class="contact-form">
+            <form class="contact-form" method="post" action="contact-form.php">
+              <input name="name" type="text" class="form-control" placeholder="Your Name">
+              <input name="email" type="text" class="form-control" placeholder="Your Email">
+              <input name="subject" type="text" class="form-control" placeholder="Subject">
+              <textarea name="message" class="form-control" placeholder="Message" row="4"></textarea>
+              <button type="submit" name="submit" class="form-control submit" value="SEND MESSAGE">SUBMIT</button>
+            </form>
+          </div>
         </div>
-        <div class="contact__grid">
-            <div class="contact__item" id="contact__item-four">
-                <h2>Or, use the following info to contact me at your discretion!</h2>
-                <p>
-                    Telphone # <a href="tel:206-496-4427">+1 206-496-4427</a><br>
-                        <a href="mailto:dg98211@gmail.com?subject=Request%20for%20Services&body=I%20have%20seen%20a%20sample%20of%20your%20work%20and%20am%20very%20interested%20in%20recruiting%20your%20services%20for%20a%20project%20I%20have%20set%20out%20to%20complete!">dg98211@gmail.com</a>
-                </p>
-            </div>
+      </div>
+      <div class="contact__grid">
+        <div class="contact__item" id="contact__item-three">
+          <h2>Or, use the following info to contact me at your discretion!</h2>
+          <p>
+            Telphone # <a href="tel:206-496-4427">+1 206-496-4427</a><br>
+            <a>dg98211 (at) gmail (dot) com</a>
+          </p>
         </div>
+      </div>
     </main>
     <footer class="page-footer">
-        <div class="social-media" id="contact-social">
-            <p>Find me on</p>
-            <a href="https://github.com/dagrimb" target="_blank" rel="noopener noreferrer">
-              <img src="img/github_icon.svg" class="social-media__icon" alt="Github">
-            </a>
-            <a href="https://twitter.com/DavidGrimberg1" target="_blank" rel="noopener noreferrer">
-              <img src="img/twitter_icon.svg" class="social-media__icon" alt="Twitter">
-            </a>
-            <a href="https://www.linkedin.com/in/david-grimberg/" target="_blank" rel="noopener noreferrer">
-              <img src="img/linkedin_icon.svg" class="social-media__icon" alt="LinkedIn">
-            </a>
-        </div>
+      <div class="social-media" id="contact-social">
+        <p>Find me on</p>
+        <a href="https://github.com/dagrimb" target="_blank" rel="noopener noreferrer">
+          <img src="img/github_icon.svg" class="social-media__icon" alt="Github">
+        </a>
+        <a href="https://twitter.com/DavidGrimberg1" target="_blank" rel="noopener noreferrer">
+          <img src="img/twitter_icon.svg" class="social-media__icon" alt="Twitter">
+        </a>
+        <a href="https://www.linkedin.com/in/david-grimberg/" target="_blank" rel="noopener noreferrer">
+          <img src="img/linkedin_icon.svg" class="social-media__icon" alt="LinkedIn">
+        </a>
+      </div>
     </footer>
-
-
-</body>
-
+  </body>
 </html>
